--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="style.css" type="text/css">
-	<script src="game.js" defer></script>
-	<script src="https://cdn.jsdelivr.net/npm/p5@2.1.1/lib/p5.min.js" defer></script>
-</head>
-<body>
-	
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Doodle Jump</title>
+    <link rel="stylesheet" href="style.css" type="text/css" />
+
+    <!-- Load p5-js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/p5@2.1.1/lib/p5.min.js"
+      defer
+    ></script>
+
+    <!-- Load game -->
+    <script src="game.js" defer></script>
+  </head>
+  <body></body>
 </html>
