--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 
     <!-- Load p5-js -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/p5@2.1.1/lib/p5.min.js"
-      defer
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@2.1.1/lib/p5.min.js"></script>
 
-    <!-- Load game -->
-    <script src="game.js" defer></script>
+    <!-- Load game and character -->
+    <script src="character.js"></script>
+    <script src="game.js"></script>
   </head>
   <body></body>
 </html>
