--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Load game and character -->
     <script src="character.js"></script>
+    <script src="platform.js"></script>
     <script src="game.js"></script>
   </head>
   <body></body>
