--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Doodle Jump</title>
+    <title>Snowy Doodle Jump</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
 
     <!-- Load p5-js -->
